added menu on top

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -40,8 +40,16 @@
     height: fit-content;
   }
 
-  &__menu {
+  &__nav {
     grid-area: footer__menu;
+
+    &::before {
+      display: block;
+      content: "";
+      height: 1px;
+      background: rgba(26, 90, 76, 0.5);
+      margin-bottom: 40px;
+    }
   }
 
   &__rights {
