--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,9 @@
 @import "./blocks/logo.scss";
 @import "./blocks/button.scss";
 @import "./blocks/schedule.scss";
-@import "./blocks/menu.scss";
+@import "./blocks/nav.scss";
 @import "./blocks/container.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/header.scss";
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
@@ -23,12 +24,21 @@
   color: $c-main;
 }
 
-html {
+.page {
   scroll-behavior: smooth;
 }
 
-body {
+.body {
   font-family: 'IBM Plex Sans', sans-serif;
+
+  &__menu {
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
 }
 
 a {
