go-up button done

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,11 +5,12 @@
   &__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 72px auto auto auto;
+    grid-template-rows: 72px auto 70px auto auto;
   
     grid-template-areas: 
       "footer__logo footer__social"
       "footer__schedule footer__contacts"
+      "go-up go-up"
       "footer__menu footer__menu"
       "footer__rights footer__rights";
   }
@@ -29,7 +30,6 @@
 
   &__schedule {
     grid-area: footer__schedule;
-    margin-bottom: 70px;
   }
 
   &__contacts {
@@ -38,6 +38,11 @@
     display: grid;
     gap: 10px;
     height: fit-content;
+  }
+
+  &__go-up {
+    grid-area: go-up;
+    justify-self: end;
   }
 
   &__nav {
