--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/go-up.scss";
 @import "./blocks/footer.scss";
 
 * {
