--- a/src/styles/blocks/go-up.scss
+++ b/src/styles/blocks/go-up.scss
@@ -1,3 +1,10 @@
-// .go-up {
+.go-up {
+  height: 50px;
+  width: 50px;
+  border: 1px solid $c-greenny;
+  border-radius: 50%;
 
-// }
+  background-image: url(../images/icons/up-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
