--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,10 +10,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
-    display: grid;
-    justify-content: center;
-    text-align: center;
   }
 
   &__half-2 {
@@ -24,6 +20,24 @@
 
     display: grid;
     gap: 20px;
+  }
+
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+
+    width: 100%;
+    padding-top: 27px;
+  }
+
+  &__burger-open {
+    grid-column: 1 / 2;
+  }
+
+  &__logo {
+    justify-self: center;
+    grid-column: 2 / 3;
   }
 
   &__nav {
