--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import "./utils/variables";
 
+@import "./blocks/body.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/button.scss";
 @import "./blocks/schedule.scss";
@@ -27,19 +28,6 @@
 
 .page {
   scroll-behavior: smooth;
-}
-
-.body {
-  font-family: 'IBM Plex Sans', sans-serif;
-
-  &__menu {
-    transform: translateX(-100%);
-    transition: transform 0.3s;
-
-    &:target {
-      transform: translateX(0);
-    }
-  }
 }
 
 a {
