--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,7 +3,7 @@
   gap: 20px;
 
   margin-bottom: 70px;
-
+  
   &__half-1 {
     min-height: 300px;
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
@@ -11,49 +11,58 @@
     background-size: cover;
     background-position: center;
   }
-
+  
   &__half-2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     line-height: 45px;
     text-align: center;
-
+    
     display: grid;
     gap: 20px;
   }
-
+  
   &__container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-
+    
     width: 100%;
     padding-top: 27px;
   }
-
+  
   &__burger-open {
     grid-column: 1 / 2;
   }
-
+  
   &__logo {
     justify-self: center;
     grid-column: 2 / 3;
   }
 
-  &__nav {
-    grid-area: header__nav;
-    margin-bottom: 24px;
-  }
+  &__menu {
+    transform: translateX(-100%);
+    transition: transform 0.3s;
 
-  &__schedule {
-    grid-area: header__schedule;
-
-    &::before {
-      display: block;
-      content: "";
-      height: 1px;
-      background: #fff;
-      margin-bottom: 40px;
+    &:target {
+      transform: translateX(0);
     }
   }
+
+  // &__nav {
+  //   grid-area: header__nav;
+  //   margin-bottom: 24px;
+  // }
+
+  // &__schedule {
+  //   grid-area: header__schedule;
+    
+  //   &::before {
+  //     display: block;
+  //     content: "";
+  //     height: 1px;
+  //     background: #fff;
+  //     margin-bottom: 40px;
+  //   }
+  // }
 }
