--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   position: absolute;
-  height: 100vh;
+  height: fit-content;
   width: 100%;
   z-index: 1;
   font-size: 14px;
@@ -11,23 +11,54 @@
   
   &__container {
     background-color: $c-greenny;
+  }
+
+  &__content {
     padding: 27px $content-padding;
+
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto;
     grid-template-areas: 
-    "menu__burger-close header__nav"
-    "header__schedule header__schedule";
+    "menu__burger-close nav--header"
+    "schedule--header schedule--header";
   }
 
   &__burger-close {
     margin-right: 34px;
+    margin-top: 32px;
   }
 
   &::after {
     display: block;
     content: "";
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  @media (min-width: 640px) {
+    &__burger-close {
+      margin-top: 16px;
+    }
+
+    &__content {
+      height: 225px;
+
+      grid-template-columns: min-content 1fr 55%;
+      grid-template-rows: auto;
+      grid-template-areas: 
+        "menu__burger-close nav--header schedule--header"
+    }
+  }
+
+  @media (min-width: 1280px) {
+    &__content {
+      padding: 40px;
+      grid-template-columns: 120px 1fr 50%;
+    }
+
+    &__burger-close img {
+      height: 20px;
+    }
   }
 }
