--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -10,4 +10,18 @@
     grid-template-rows: 1fr 1fr;
     gap: 20px;
   }
+
+  &--header {
+    grid-area: nav--header;
+    margin-bottom: 24px;
+  }
+
+  @media (min-width: 1280px) {
+    font-size: 22px;
+    font-weight: 500;
+
+    &__list {
+    gap: 30px;
+    }
+  }
 }
