added header, art-museum and menu blocks

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,7 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%h4 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
   font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
 }
