--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/extends";
+@import "./utils/reset";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/art-museum.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/list.scss";
+@import "./blocks/schedule.scss";
