all header, menu  done

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
   display: grid;
-  grid-template-columns: 1fr $button-arrow-size;
+  grid-template-columns: 1fr auto;
   align-items: center;
 
   font-size: 16px;
@@ -26,12 +26,21 @@
 
   &__arrow {
     display: block;
-    height: $button-arrow-size;
-    width: $button-arrow-size;
+    height: 50px;
+    width: 50px;
     display: grid;
     align-items: center;
     justify-content: center;
 
     background-color: $c-greenny;
+  }
+
+  @media (min-width: 1120px) {
+    width: 270px;
+
+    &__arrow {
+      height: 70px;
+      width: 70px;
+    }
   }
 }
