--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -42,7 +42,7 @@
     }
 
     &__content {
-      height: 225px;
+      min-height: 225px;
 
       grid-template-columns: min-content 1fr 55%;
       grid-template-rows: auto;
@@ -51,7 +51,7 @@
     }
   }
 
-  @media (min-width: 1280px) {
+  @media (min-width: 1120px) {
     &__content {
       padding: 40px;
       grid-template-columns: 120px 1fr 50%;
