--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,16 +6,22 @@
 @import "./blocks/body.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/button.scss";
+@import "./blocks/container.scss";
+
+@import "./blocks/half-1.scss";
+@import "./blocks/half-2.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/nav.scss";
-@import "./blocks/container.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/header.scss";
+
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/lecture.scss";
+
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
+
 @import "./blocks/subscription.scss";
 @import "./blocks/go-up.scss";
 @import "./blocks/footer.scss";
@@ -26,7 +32,7 @@
   color: $c-main;
 }
 
-.page {
+html {
   scroll-behavior: smooth;
 }
 
