header, menu, footer for mobile were added

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,1 +1,41 @@
-// sdfjl
+.icon {
+  display: inline-block;
+  width: 18px;
+  height: 12px;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &--menu {
+    background-image: url(../images/menu.svg);
+
+    &:hover {
+      background-image: url(../images/menu_hover.svg);
+    }
+  }
+
+  &--cross {
+    width: 12px;
+    background-image: url(../images/cross.svg);
+  }
+
+  &--facebook {
+    height: 24px;
+    width: 11px;
+    margin-right: 28px;
+    background-image: url(../images/facebook.svg);
+  }
+
+  &--instagram {
+    height: 24px;
+    width: 24px;
+    background-image: url(../images/instagram.svg);
+  }
+
+  &--to-top {
+    height: 50px;
+    width: 50px;
+    background-image: url(../images/top_button.svg);
+  }
+}
