--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,11 @@
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/container.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/list-nav.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/footer.scss";
