--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "utils/reset.scss";
+@import "utils/_vars";
+@import "utils/header.scss";
+@import "utils/_mixins.scss";
+@import "utils/container.scss";
+@import "utils/grid.scss";
+@import "utils/menu.scss";
+@import "utils/icon.scss";
+@import "utils/page.scss";
+@import "utils/events.scss";
+@import "utils/gallery.scss";
+@import "utils/subscribe.scss";
+@import "utils/swiper.scss";
+@import "utils/footer.scss";
