header was optimized from phone to desktop, sections markup were added and started doing sections

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,23 +5,39 @@
   color: #fff;
   
   &__content {
-    padding: 28px 25px 27px;
+    display: flex;
+    flex-direction: column;
+    padding: 14px 0 27px;
 
     @include onTablet {
-      padding: 44px 37px 40px;
+      padding-bottom: 40px;
+      flex-direction: row;
+      justify-content: space-between;
     }
 
     @include onDesktop {
-      padding: 44px 58px 48px;
+      padding-bottom: 48px;
     }
   }
   
   &__nav {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     margin-bottom: 24px;
+
+    @include onTablet {
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
+      border-bottom-color: transparent;
+    }
     
     &--icon {
       position: absolute;
+    }
+
+    &__schedule {
+      
+      @include onTablet {
+        display: flex;
+      }
     }
   }
   
