--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -23,4 +23,33 @@
       transform: translateX(0);
     }
   }
+
+  &__section {
+    margin-bottom: 100px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__section-title {
+    margin-bottom: 40px;
+
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    color: $colorBlack;
+
+    @include onTablet {
+      text-align: left;
+      margin-bottom: 48px;
+    }
+
+    @include onDesktop {
+      text-align: left;
+      margin-bottom: 56px;
+    }
+  }
 }
