--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "./reset";
 @import "./variables";
 
+@import "./blocks/grid.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/container.scss";
@@ -12,4 +13,5 @@
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/schedule.scss";
+@import "./blocks/events.scss";
 @import "./blocks/footer.scss";
