--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-position: top right;
   background-image: url(../images/background.png);
-
+  
   &__title {
     padding: 250px 0 20px;
     display: block;
@@ -18,6 +18,13 @@
     font-size: 45px;
     line-height: 100%;
     color: #000;
+
+    @media (min-width: 321px) and (max-width: 600px) {
+      display: inline-block;
+      margin: 20px 0 10px;
+      padding: 0;
+      background-color: #fff;
+    }
 
     @include onDesktop {
       padding: 119px 0 89px;
@@ -37,15 +44,12 @@
   }
 
   &__wrap-ticket {
-    padding-bottom: 70px;
-
     @include onDesktop {
       padding: 0 0 110px 50px;
     }
   }
 
   &__ticket {
-
     display: block;
     height: $ticket-field-height;
     max-width: 270px;
@@ -57,6 +61,12 @@
     line-height: 100%;
     color: $colorBlack;
     
+    @media (min-width: 321px) and (max-width: 600px) {
+      margin: 10px 0;
+      padding: 0;
+      background-color: #fff;
+    }
+
     &--text {
       display: inline-block;
       padding-top: calc(#{$ticket-field-height} / 2 - 8px);
