--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -34,6 +34,9 @@
   }
 
   &--to-top {
+    position: fixed;
+    right: 10px;
+    bottom: 20px;
     height: 50px;
     width: 50px;
     background-image: url(../images/top_button.svg);
