events and lecture blocks all done

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -33,6 +33,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
+    margin-bottom: 88px;
+
     &__burger-open {
       top: 46px;
       left: 36px;
