--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,8 +1,9 @@
 .events {
-  display: grid;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+  &__content {
+    display: grid;
+    text-align: center;
+    align-items: center;
+  }
 
   &__title {
     font-weight: 700;
@@ -10,5 +11,20 @@
     font-size: 36px;
 
     margin-bottom: 40px;
+  }
+
+  @media (min-width: 640px) {
+    &__content {
+      text-align: start;
+    }
+
+    &__title {
+      font-size: 48px;
+      margin-bottom: 48px;
+    }
+  }
+
+  @media (min-width: 1120px) {
+
   }
 }
