--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -1,25 +1,24 @@
 .lecture {
   position: relative;
+  margin-bottom: 150px;
 
-  height: 210px;
-  display: flex;
-  justify-content: center;
+  &__img {
+    height: 210px;
+    width: 100%;
+    object-fit: cover;
+  }
 
-  background-image: url(../images/Rectangle-20.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 100px;
-
-  &__container {
+  &__content {
     position: absolute;
-    top: 153px;
-    left: $content-padding;
-    right: $content-padding;
+    top: 154px;
+    margin-left: 50%;
+    transform: translateX(-50%);
 
     height: 140px;
-    max-width: 570px;
-
+    min-width: 280px;
     padding: 20px 5px;
+
+    font-size: 16px;
 
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -27,9 +26,10 @@
 
   &__box {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 15px;
-    font-size: 16px;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-bottom: 20px;
+    
     
     &-type {
       font-weight: 500;
@@ -44,9 +44,52 @@
 
   &__title {
     font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 28px;
-    margin-bottom: 10px;
-    text-align:center;
+    line-height: 28px;
+
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  @media (min-width: 640px) {
+    margin-bottom: 208px;
+    
+    &__img {
+      height: 390px;
+      padding: 0 34px;
+    }
+    
+    &__content {
+      top: 300px;
+      height: 204px;
+      width: 80%;
+      max-width: 570px;
+      padding: 45px 55px 50px;
+    }
+
+    &__box {
+      justify-content: start;
+      gap: 100px;
+      font-size: 14px;
+      padding: 0;
+    }
+
+    &__title {
+      font-size: 36px;
+      line-height: 36px;
+      text-align: left;
+    }
+  }
+
+  @media (min-width: 1120px) {
+    &__img {
+      height: 550px;
+      padding: 0;
+    }
+    
+    &__content {
+      top: 450px;
+    }
   }
 }
