--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,5 +4,5 @@ $c-greenny: #1a5a4c;
 $c-greenny-trnst: #1a5a4c90;
 
 $content-padding: 20px;
-$button-arrow-size: 50px;
-
+$button-arrow-size-S: 50px;
+$button-arrow-size-L: 70px;
