added current-events block

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -22,6 +22,15 @@
     }
   }
 
+  &--desktop {
+    display: block;
+
+    @include onDesktop {
+      display: grid;
+      align-items: center;
+    }
+  }
+
   &__item {
     @for $start from 1 through $columnsTablet {
       @for $end from $start through $columnsTablet {
