--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,5 @@
 @import "./blocks/menu.scss";
 @import "./blocks/list.scss";
 @import "./blocks/schedule.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/card.scss";
