added lecture block, added mixins for font styles

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -28,51 +28,20 @@
   }
 
   &__event-type {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-
-    color: #687480;
-
-    @include onTablet {
-      font-size: 14px;
-      line-height: 14px;
-    }
+    @include text-type;
   }
 
   &__event-date {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-
-    color: $c-green;
-
-    @include onTablet {
-      font-size: 14px;
-      line-height: 21px;
-    }
+    @include text-date;
   }
 
   &__title {
     margin-bottom: 10px;
 
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 28px;
-
-    color: $c-main-black;
+    @include text-title;
 
     @include onTablet {
       margin-bottom: 15px;
-
-      font-size: 36px;
-      line-height: 36px;
     }
 
     &::after {
