--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,4 @@
 @import "./blocks/schedule.scss";
 @import "./blocks/current-events.scss";
 @import "./blocks/card.scss";
+@import "./blocks/lecture.scss";
