--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -16,3 +16,48 @@
     @content;
   }
 }
+
+@mixin text-type {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+
+  color: $c-grey;
+
+  @include onTablet {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
+@mixin text-date {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: $c-green;
+
+  @include onTablet {
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
+
+@mixin text-title {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 28px;
+
+  color: $c-main-black;
+
+  @include onTablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
