--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,3 @@
-$c-gray: #eee;
 $columnsTablet: 6;
 $columnsDesktop: 12;
 
@@ -6,3 +5,4 @@ $c-white: #fff;
 $c-black: #000;
 $c-green: #1a5a4c;
 $c-main-black: #0f0e08;
+$c-grey: #687480;
