--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 body,
@@ -8,3 +9,4 @@ h3 {
   margin: 0;
   padding: 0;
 }
+
