--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,8 @@
 .gallery {
+  margin-bottom: 200px;
+  &__desktop {
+    display: none;
+  }
   &__title {
     font-weight: 700;
     font-family: 'Montserrat', sans-serif;
@@ -6,5 +10,55 @@
     text-align: center;
 
     margin-bottom: 40px;
+  }
+
+  @media (min-width: 640px) {
+
+  }
+
+  @media (min-width: 1120px) {
+    &__title {
+      text-align: left;
+      font-size: 48px;
+      line-height: 48px;
+      margin-bottom: 56px;
+    }
+
+    &__swiper {
+      display: none;
+    }
+
+    &__desktop {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto auto;
+      gap: 30px;
+
+      &-img {
+        width: 100%;
+        object-fit: cover;
+        transition: scale 0.3s;
+
+        &:hover {
+          scale: 1.05;
+        }
+
+        &-1 {
+          grid-column: 1 / 2;
+        }
+        
+        &-2 {
+          grid-column: 2 / 4;
+        }
+        
+        &-3 {
+          grid-column: 1 / 3;
+        }
+
+        &-4 {
+          grid-column: 3 / 4;
+        }
+      }
+    }
   }
 }
