section EVENTS was added for desktop

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,57 @@
 .events {
+  display: flex;
+  gap: 130px;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 104px;
+
   &__photo {
-    width: 670px;
-    height: 520px;
+    width: 55%;
+  }
+
+  &__top-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 30px;
+
+    &--name {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+    }
+
+    &--date {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 150%;
+      color: $colorGreen;
+    }
+  }
+
+  &__title {
+    padding-bottom: 15px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 100%;
+    color: $colorBlack;
+
+    &::after {
+      content: "";
+      background-image: url(../images/orange_square.svg);
+      display: inline-block;
+      margin: 0 0 2px 10px;
+      height: 15px;
+      width: 15px;
+    }
+  }
+
+  &__description {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
   }
 }
