--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -40,5 +40,13 @@
     height: 50px;
     width: 50px;
     background-image: url(../images/top_button.svg);
+
+    @include onDesktop {
+      display: none;
+    }
+
+    @include onTablet {
+      display: none;
+    }
   }
 }
