--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -9,6 +9,7 @@
   }
 
   &__item {
+    display: inline-block;
     @for $start from 1 through 12 {
       @for $end from $start through 12 {
         &--desktop-#{$start}-#{$end} {
