--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -43,11 +43,13 @@
     color: $colorBlack;
 
     @include onTablet {
+      font-size: 48px;
       text-align: left;
       margin-bottom: 48px;
     }
 
     @include onDesktop {
+      font-size: 48px;
       text-align: left;
       margin-bottom: 56px;
     }
