--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,17 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin Mobile {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin Tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin Dektop {
+  @media (min-width: 1280px) {
+    @content;
   }
 }
