--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$color-white: #fff;
+$color-dark: #0F0E08;
+$color-gray: #687480;
+$color-section-text: #4E4E4E;
+$color-red: #F14A27;
+
+$color-green: #1A5A4C;
+
+$logo-width: 55px;
