--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "utils/vars";
+@import "utils/reset";
+@import "utils/mixins";
+@import "blocks/header";
+@import "blocks/events";
+@import "blocks/lection";
+@import "blocks/gallery";
+@import "blocks/follow";
+@import "blocks/footer";
+@import "blocks/container";
+@import "blocks/page";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/nav";
+@import "blocks/button";
+@import "blocks/section";
+@import "blocks/grid";
