section ANONCE was adeed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,5 @@
 @import "./blocks/menu.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/events.scss";
+@import "./blocks/anonce.scss";
 @import "./blocks/footer.scss";
