--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -27,6 +27,14 @@
 
     display: flex;
     gap: 26px;
+    
+    &-icon {
+      transition: scale $transition-time;
+
+      &:hover {
+        scale: 1.3;
+      }
+    }
   }
 
   &__schedule {
