--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,6 +13,11 @@
     position: absolute;
     top: 34px;
     left: 24px;
+    transition: scale $transition-time;
+
+    &:hover {
+      scale: 1.5;
+    }
   }
 
   &__container {
