--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -3,4 +3,9 @@
   font-weight: 700;
   font-size: 30px;
   line-height: 30px;
+  transition: scale $transition-time;
+
+  &:hover {
+    scale: 1.02;
+  }
 }
