--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,6 +1,6 @@
 .nav {
   margin-bottom: 80px;
-  
+
   &__list {
     list-style: none;
     padding: 0;
@@ -9,6 +9,13 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
+  }
+
+  &__item {
+    transition: scale $transition-time;
+    &:hover {
+      scale: 1.05;
+    }
   }
 
   &--header {
