--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,3 +6,4 @@ $c-greenny-trnst: #1a5a4c90;
 $content-padding: 20px;
 $button-arrow-size-S: 50px;
 $button-arrow-size-L: 70px;
+$transition-time: 0.3s;
