--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,15 +1,17 @@
 .swiper {
-  &-wrapper {
-    height: 85vh;
-    margin-bottom: 20px;
-  }
+  // &-wrapper {
+  //   margin-bottom: 20px;
+  //   width: 280px;
+  // }
 
   &-slide {
-    height: 410px;
+    max-width: 280px;
   }
-  
+
   &-img {
-    width: 100%;
+    height: 410px;
+    width: 280px;
+    object-fit: cover;
   }
 
   &-pagination {
@@ -22,6 +24,5 @@
       background-color: $c-greenny;
       }
     }
-
   }
 }
