fixed 404 and swiper, added links on contacts

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,7 +6,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 112px auto 70px auto auto;
-  
     grid-template-areas: 
       "footer__logo footer__social"
       "footer__schedule footer__contacts"
@@ -24,10 +23,9 @@
     grid-area: footer__social;
     justify-self: end;
     align-self: center;
-
     display: flex;
     gap: 26px;
-    
+
     &-icon {
       transition: scale $transition-time;
 
@@ -39,7 +37,6 @@
 
   &__schedule {
     grid-area: footer__schedule;
-
     display: flex;
     flex-direction: column;
     margin-bottom: 64px;
@@ -47,10 +44,22 @@
 
   &__contacts {
     grid-area: footer__contacts;
-
     display: grid;
     gap: 10px;
     height: fit-content;
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-link {
+      transition: scale $transition-time;
+
+      &:hover {
+        scale: 1.1;
+      }
+    }
   }
 
   &__go-up {
@@ -72,12 +81,10 @@
 
   &__rights {
     grid-area: footer__rights;
-    
     display: grid;
     gap: 10px;
     text-align: center;
     font-size: 12px;
-
     margin-bottom: 18px;
 
     &-item {
@@ -89,7 +96,6 @@
     &__content {
       grid-template-columns: 154px 1fr 1fr 154px;
       grid-template-rows: 132px auto auto auto;
-  
       grid-template-areas: 
         "footer__logo footer__schedule footer__contacts ."
         "footer__social footer__schedule footer__contacts ."
@@ -121,7 +127,6 @@
     &__content {
       grid-template-columns: 154px 1fr 1fr 3fr;
       grid-template-rows: 132px auto auto;
-  
       grid-template-areas: 
         "footer__logo footer__schedule footer__contacts footer__nav"
         "footer__social footer__schedule footer__contacts footer__nav"
