--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,12 +10,15 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 36px;
     text-align: center;
-
     margin-bottom: 40px;
   }
 
   @media (min-width: 640px) {
-
+    &__title {
+      font-size: 48px;
+      text-align: left;
+      margin-bottom: 48px;
+    }
   }
 
   @media (min-width: 1120px) {
