--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,28 +1,45 @@
+$swiper-img-width-S: 280px;
+$swiper-img-width-M: 340px;
+
 .swiper {
-  // &-wrapper {
-  //   margin-bottom: 20px;
-  //   width: 280px;
-  // }
+  &-wrapper {
+    margin-bottom: 30px;
+  }
 
   &-slide {
-    max-width: 280px;
+    max-width: $swiper-img-width-S;
   }
 
   &-img {
     height: 410px;
-    width: 280px;
+    width: $swiper-img-width-S;
     object-fit: cover;
   }
 
   &-pagination {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 22px;
 
     &-bullet {
       &-active {
       background-color: $c-greenny;
       }
+    }
+  }
+
+  @media (min-width: 640px) {
+    &-wrapper {
+      margin-bottom: 42px;
+    }
+
+    &-slide {
+      max-width: $swiper-img-width-M;
+    }
+
+    &-img {
+      height: 543px;
+      width: $swiper-img-width-M;
     }
   }
 }
