added lectureblock, added gallery block, added subscription block

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -31,6 +31,11 @@
     }
   }
 
+  &--gallery {
+    grid-template-rows: 600px 360px;
+    grid-row-gap: 30px;
+  }
+
   &__item {
     @for $start from 1 through $columnsTablet {
       @for $end from $start through $columnsTablet {
@@ -50,6 +55,14 @@
           }
         }
       }
+    }
+
+    &--desktop-r-1 {
+      grid-row: 1 / 2;
+    }
+
+    &--desktop-r-2 {
+      grid-row: 2 / 3;
     }
   }
 }
