--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -2,7 +2,7 @@
   &__photo-container {
     width: 320px;
     height: 210px;
-    margin: 0 -20px 0;
+    margin: 0 -20px;
 
     @include onTablet {
       width: 100%;
@@ -32,7 +32,7 @@
     transform: translateY(-40%);
 
     background: $c-white;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
       height: 204px;
