--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -53,4 +53,20 @@
       transform: translateY(0);
     }
   }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @include onTablet {
+      margin-bottom: 92px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__subscription {
+    margin-bottom: 50px;
+  }
 }
