--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,5 @@
 @import "./blocks/current-events.scss";
 @import "./blocks/card.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
