added footer, added smooth scroll

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -61,6 +61,7 @@
 
   &__tickets-link {
     width: 229px;
+    padding: 17px 0;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
@@ -75,10 +76,12 @@
 
     @include onTablet {
       width: 199px;
+      padding: 27px 0;
     }
   }
 
   &__arrow {
+    display: block;
     width: 49px;
     height: 48px;
 
