--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,4 +1,4 @@
-.card {
+.event {
   &__photo-container {
     margin-bottom: 20px;
 
@@ -27,18 +27,18 @@
     }
   }
 
-  &__event-type {
-    @include text-type;
+  &__type {
+    @include event-text-type;
   }
 
-  &__event-date {
-    @include text-date;
+  &__date {
+    @include event-text-date;
   }
 
   &__title {
     margin-bottom: 10px;
 
-    @include text-title;
+    @include event-text-title;
 
     @include onTablet {
       margin-bottom: 15px;
