--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -95,6 +95,10 @@
     border-radius: 50%;
     background-color: #e0e0e0;
 
+    &:first-child {
+      background-color: $c-green;
+    }
+
     &:active {
       background-color: $c-green;
     }
