--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -63,15 +63,15 @@
   }
 
   &__type {
-    @include text-type;
+    @include event-text-type;
   }
 
   &__date {
-    @include text-date;
+    @include event-text-date;
   }
 
   &__title {
-    @include text-title;
+    @include event-text-title;
     text-align: center;
 
     @include onTablet {
