--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -24,6 +24,12 @@
   &__list {
     margin-bottom: 24px;
 
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    
+    color: $c-white;
+
     @include onTablet {
       margin-bottom: 0;
     }
@@ -46,6 +52,8 @@
   }
 
   &__schedule {
+    color: $c-white;
+
     @include onTablet {
       display: grid;
       grid-template-columns: 158px 144px;
