--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,8 @@
 .page {
   font-family: "Montserrat", "IBM Plex Sans", sans-serif;
 
+  scroll-behavior: smooth;
+
   &__body {
     margin: 0;
   }
@@ -37,7 +39,7 @@
     left: 0;
     right: 0;
 
-    transform: translateY(-100%);
+    transform: translateY(-150%);
 
     transition: all 0.3s;
 
