--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,9 @@
 @import "./blocks/list.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/current-events.scss";
-@import "./blocks/card.scss";
+@import "./blocks/event.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/contacts.scss";
