--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,7 +17,7 @@
   }
 }
 
-@mixin text-type {
+@mixin event-text-type {
   font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -32,7 +32,7 @@
   }
 }
 
-@mixin text-date {
+@mixin event-text-date {
   font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -47,7 +47,7 @@
   }
 }
 
-@mixin text-title {
+@mixin event-text-title {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
