--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -31,4 +31,16 @@
     height: 14px;
     background-image: url(../images/cross.svg);
   }
+
+  &--facebook {
+    width: 12px;
+    height: 24px;
+    background-image: url(../images/facebook.svg);
+  }
+
+  &--instagram {
+    width: 24px;
+    height: 24px;
+    background-image: url(../images/instagram.svg);
+  }
 }
