--- a/src/styles/blocks/list.scss
+++ b/src/styles/blocks/list.scss
@@ -39,12 +39,12 @@
   &__link {
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
+    font-weight: inherit;
+    font-size: inherit;
+    line-height: inherit;
 
     text-decoration: none;
 
-    color: $c-white;
+    color: inherit;
   }
 }
