--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,4 +1,5 @@
 .subscription {
+  box-sizing: border-box;
   padding: 88px 0;
 
   background-image: url(../images/photos/subscription-bg-mobile.jpg);
@@ -7,10 +8,14 @@
   background-size: cover;
 
   @include onTablet {
+    padding: 80px 0;
+
     background-image: url(../images/photos/subscription-bg-tablet.jpg);
   }
 
   @include onDesktop {
+    padding: 160px 0;
+
     background-image: url(../images/photos/subscription-bg-desktop.jpg);
   }
 
@@ -79,6 +84,10 @@
 
     border: none;
 
+    &:target {
+      border: none;
+    }
+
     @include onTablet {
       padding: 28px 0 28px 24px;
       width: 374px;
@@ -109,6 +118,9 @@
 
   &__form-message {
     margin-top: 16px;
+    left: 0;
+    right: 0;
+    position: absolute;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
